not retard commit

--- a/XenoByte.csproj
+++ b/XenoByte.csproj
@@ -21,11 +21,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Security.Claims" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\API\" />
     <Folder Include="Models\View\" />
   </ItemGroup>
 
